--- a/index.html
+++ b/index.html
@@ -3,10 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ben year 11 portfolio</title>
     <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
     
+    <div class="topnav">
+        <nav class="nav" role="navigation">
+            <ul class="nav_items">
+                <li class="nav_item"><a href="index.html" class="nav_link">Home</a></li>
+                <li class="nav__item"><a href="project1.html" class="nav__link">Project 1</a></li>
+                <li class="nav__item"><a href="project2.html" class="nav__link">Project 2</a></li>
+                <li class="nav__item"><a href="project3.html" class="nav__link">Project 3</a></li>
+                </ul>
+                </nav>
+                </div>
+        
+
+                </ul>
+            </ul>
+        </nav>
+
+ <h1>Ben Mason</h1> 
+ <h2>Year 11 Portfolio</h2>  
 </body>
 </html>
