i added an overview of my charactor

--- a/project1.html
+++ b/project1.html
@@ -9,10 +9,32 @@
 <body>
 
 
-<h1>Portfolio</h1>
+<h1>low poly charactor</h1>
 
 <h3>overview</h3>
-<p>blahsklfhlksajdgsd;gh shdg;hj</p>
+<p>i will make a 3D male charactor. I will annimate him to stride along and also to wave</p>
+<P>My end users will be male teenagers between 13 and 15 who want a male charactor that they can aspire to be and look up to when playing the game. They would like a charactor that looks like the person they want to be so i'll make him tall and strong and buff with wide shoulders.</P>
+
+<ul>
+    <li>Legs
+        <ul>
+            <li>long legs</li>
+            <li>knees that bend</li>
+        </ul>
+    </li>
+    <li>Arms
+        <ul>
+            <li>swing when moving</li>
+            <li>elbows that bend</li>
+        </ul>
+    </li>
+    
+    <li>arms that move smoothley when the charactor is moving</li>
+            <li>a defined body</li>
+            <li>a head</li>
+            <li>rigging</li>
+
+        </ul>
 <div class="topnav">
     <nav class="nav" role="navigation">
         <ul class="nav_items">
