--- a/project1.html
+++ b/project1.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ben year 11 portfolio</title>
+    <title>Ben year 11 Portfolio</title>
     <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
 
 
-<h1>low poly charactor</h1>
+<h1>Low Poly Charactor</h1>
 
-<h3>overview</h3>
-<p>i will make a 3D male charactor. I will annimate him to stride along and also to wave</p>
-<P>My end users will be male teenagers between 13 and 15 who want a male charactor that they can aspire to be and look up to when playing the game. They would like a charactor that looks like the person they want to be so i'll make him tall and strong and buff with wide shoulders.</P>
+<h3>Overview</h3>
+<p>I will make a 3D male charactor. I will animate him to stride along and also to wave</p>
+<P>My end users will be male teenagers between 13 and 15 who want a male character that they can aspire to be and look up to when playing the game. They would like a charactor that looks like the person they want to be so i'll make him tall and strong and buff with wide shoulders.</P>
 
 <ul>
     <li>Legs
