--- a/project1.html
+++ b/project1.html
@@ -26,15 +26,24 @@
         <ul>
             <li>swing when moving</li>
             <li>elbows that bend</li>
+            <li>arms that move smoothly when the charactor is moving</li>
         </ul>
     </li>
     
-    <li>arms that move smoothley when the charactor is moving</li>
+    <li>Torso
+        <ul>
             <li>a defined body</li>
             <li>a head</li>
             <li>rigging</li>
-
         </ul>
+    </li>
+    <li>Intellectual Property
+        <ul>
+            <li>Anyone who uses my character has to give me (Ben) full credit.</li>
+        </ul>
+    </li>
+</ul>
+
 <div class="topnav">
     <nav class="nav" role="navigation">
         <ul class="nav_items">
@@ -42,9 +51,10 @@
             <li class="nav__item"><a href="project1.html" class="nav__link">Project 1</a></li>
             <li class="nav__item"><a href="project2.html" class="nav__link">Project 2</a></li>
             <li class="nav__item"><a href="project3.html" class="nav__link">Project 3</a></li>
-            </ul>
-            </nav>
-            </div>
+        </ul>
+    </nav>
+</div>
+
 </body>
 </html>
 
