--- a/project1.html
+++ b/project1.html
@@ -57,4 +57,69 @@
 
 </body>
 </html>
+<h1>Development</h1>
 
+<h2>Turnaround</h2>
+
+<h3>Development</h3>
+<p>I drew my character on paper and scanned it</p>
+<img src="turnaround.jpg">
+
+<h3>Testing</h3>
+<p>I could of put more effort into drawing my character to make it look better</p>
+
+<h3>Feedback</h3>
+<h4>What could I improve about this character</h4>
+<p>......</p>
+<p>Include more details in the feet</p>
+<h4>Does my character look proportinal</h4>
+<p>.....</p>
+<p>....</p>
+
+<h3>Improvements</h3>
+<p>Write what you changed</p>
+<img src="imageFileName">
+
+
+<h2>head</h2>
+
+<h3>Development</h3>
+<p>......</p>
+<img src="turnaround.jpg">
+
+<h3>Testing</h3>
+<p>.....</p>
+
+<h3>Feedback</h3>
+<h4>What could I improve about the head</h4>
+<p>....</p>
+<p>.....</p>
+<h4>Does my head look proportinal</h4>
+<p>The head is abit too big</p>
+<p>The neck being abit too long</p>
+
+<h3>Improvements</h3>
+<p>Write what you changed</p>
+<img src="imageFileName">
+
+
+<h2>armature</h2>
+
+<h3>Development</h3>
+<p>......</p>
+<img src="turnaround.jpg">
+
+<h3>Testing</h3>
+<p>.....</p>
+
+<h3>Feedback</h3>
+<h4>What could I improve about the armature</h4>
+<p>....</p>
+<p>.....</p>
+<h4>Is the armature in all the right places</h4>
+<p>....</p>
+<p>....</p>
+
+<h3>Improvements</h3>
+<p>Write what you changed</p>
+<img src="imageFileName">
