--- a/project 2.html
+++ b/project 2.html
@@ -39,19 +39,19 @@
         <ul>
             <li>making sure to clearly seperate the wrong letters from the correct letters</li><!-- Write a specification to above requirement here -->
             <li>display every letter that the user has typed in</li><!--Write a specification to above requirement here  -->
-            <li>spec3</li><!-- Write a specification to above requirement here -->
+            <li>easy to read font</li><!-- Write a specification to above requirement here -->
         </ul>
-        <h3>Five letter word</h3> <!-- rite a requirement here -->
+        <h3>Five letter word</h3> <!-- write a requirement here -->
         <ul>
             <li>make sure to display the correct letters in the correct order</li><!-- Write a specification to above requirement here -->
             <li>tell the user they cant type in a word with more than 5 letters</li><!-- Write a specification to above requirement here -->
             <li>dont start the game if the word they chose is less than 5 letters</li><!-- Write a specification to above requirement here -->
         </ul>
-        <h3>req3</h3> <!-- Write another requirement here -->
+        <h3>allocated chances </h3> <!-- Write another requirement here -->
         <ul>
-            <li>spec1</li><!-- Write a specification to above requirement here -->
-            <li>spec2</li><!-- Write a specification to above requirement here -->
-            <li>spec3</li><!-- Write a specification to above requirement here -->
+            <li>equal spacing</li><!-- Write a specification to above requirement here -->
+            <li>displaying the amout of chances the user has left</li><!-- Write a specification to above requirement here -->
+            <li>Showcases incorrect letters contributing to allocated chances</li><!-- Write a specification to above requirement here -->
         </ul>
     
         <!-- Add more requiremnts and specifications as you need them -->
@@ -60,8 +60,8 @@
     <section>
         <h2>Implications</h2>
         <h3>Aesthetics</h3>
-        <p>Lorem ipsum dolor sit amet, con</p> <!-- Write what the implication is here -->
-        <p>Lorem ipsum dolor sit amet, con</p> <!-- Write what you'll do to address the implication here -->
+        <p>easy to read and understand font</p> <!-- Write what the implication is here -->
+        <p>nice colors and nice looking page</p> <!-- Write what you'll do to address the implication here -->
         <!-- Copy and paste the above implication to add another implication -->
     </section>
     
