--- a/project2.html
+++ b/project2.html
@@ -68,7 +68,58 @@
     
     <section>
         <h2>Development</h2>
-        <a href="development-page.html">Sprint 1</a> <!-- For any project without sprints, change this to just say Development Log -->
+
+<h2>Task 1</h2>
+
+<h3>Development</h3>
+<p>Write what you did</p>
+<img src="imageFileName">
+
+<h3>Testing</h3>
+<table>
+ 
+    <thead>
+      <tr>
+        <th>Test/Input</th>
+        <th>Expectation</th>
+        <th>Output</th>
+      </tr>
+    </thead>
+
+    <!-- Test 1 -->
+    <tr>
+      <td>""</td> <!-- Input -->
+      <td>What happens?</td><!-- cExpectation -->
+      <td><img class="output" src="placeholder.png"/></td><!-- Output/Screenshot -->
+    </tr>
+
+    <!-- Test 2 -->
+    <tr>
+        <td>""</td> <!-- Input -->
+        <td>What happens?</td><!-- cExpectation -->
+        <td><img class="output" src="placeholder.png"/></td><!-- Output/Screenshot -->
+      </tr>
+
+    <!-- Test 3 -->
+    <tr>
+        <td>""</td> <!-- Input -->
+        <td>What happens?</td><!-- cExpectation -->
+        <td><img class="output" src="placeholder.png"/></td><!-- Output/Screenshot -->
+      </tr>
+
+  </table>
+
+<h3>Feedback</h3>
+<h4>Question 1</h4>
+<p>Feedback from person 1</p>
+<p>Feedback from person 2</p>
+<h4>Question 2</h4>
+<p>Feedback from person 1</p>
+<p>Feedback from person 2</p>
+
+<h3>Improvements</h3>
+<p>Write what you changed</p>
+<img src="imageFileName">
     </section>
    
 </body>
